unpackaged/main/default/objects/DirectoryApi__Directory__c/DirectoryApi__Directory__c.object-meta.xml
<CustomObject>
    <description>This object is used for the creation and management of directories to be displayed to site users.</description>
    <label>Member Directory</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>