unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Badge_types_filter__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Badge_types_filter__c</fullName>
    <description>User defined badge types</description>
    <inlineHelpText>User defined badge types</inlineHelpText>
    <label>Badge types filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>