unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Criteria__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Criteria__c</fullName>
    <description>Defines the badge or the criteria used to filter the full list of possible results in the directory</description>
    <inlineHelpText>Defines the badge or the criteria used to filter the full list of possible results in the directory</inlineHelpText>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>