unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Criteria_Type__c</fullName>
    <description>This field defines the type of criteria used to filter the results of the directory.</description>
    <inlineHelpText>This field defines the type of criteria used to filter the results of the directory.</inlineHelpText>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Badge Type</fullName>
                <default>true</default>
                <label>Badge Type</label>
            </value>
            <value>
                <fullName>Filter Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>