unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Directory_Object__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Directory_Object__c</fullName>
    <description>Defines the object which stores the records to be displayed in the directory.</description>
    <inlineHelpText>Defines the object which stores the records to be displayed in the directory.</inlineHelpText>
    <label>Directory Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>