unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Display_Results__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Display_Results__c</fullName>
    <description>Defines the maximum number of results that will be returned on one page after a search is entered in the directory.</description>
    <inlineHelpText>Defines the maximum number of results that will be returned on one page after a search is entered in the directory.</inlineHelpText>
    <label>Display Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>