unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Email_Me_From_Address__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Email_Me_From_Address__c</fullName>
    <description>The email in this field defines the From email address to appear in the recipients email.</description>
    <inlineHelpText>The email in this field defines the From email address to appear in the recipients email.</inlineHelpText>
    <label>Email Me - From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>