unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Email_Me_To_Address_API_Field__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Email_Me_To_Address_API_Field__c</fullName>
    <description>Define the API name of the email field you wish to populate the To field when using the Email Me feature of the directory.</description>
    <inlineHelpText>Define the API name of the email field you wish to populate the To field when using the Email Me feature of the directory.</inlineHelpText>
    <label>Email Me - To Address API Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>