unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Email_Template__c</fullName>
    <description>Provide the Email Template you wish to use for directory communication</description>
    <inlineHelpText>Provide the Email Template you wish to use for directory communication</inlineHelpText>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>