unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this directory.</description>
    <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this directory.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>