unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Enable_Email_Me__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Enable_Email_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, directory visitors will be able to contact members of the directory by clicking the Email Me button that appears on the member profile.</description>
    <inlineHelpText>When checked, directory visitors will be able to contact members of the directory by clicking the Email Me button that appears on the member profile.</inlineHelpText>
    <label>Enable Email Me</label>
    <type>Checkbox</type>
</CustomField>