unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Enable_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Enable_Profile_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field, authenticated users will be able to navigate back to their profile to update their contact record.</description>
    <inlineHelpText>By checking this field, authenticated users will be able to navigate back to their profile to update their contact record.</inlineHelpText>
    <label>Enable Profile Link</label>
    <type>Checkbox</type>
</CustomField>