unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Instructional_Text__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Instructional_Text__c</fullName>
    <description>Defines the instructional text to be displayed above the search filters in the directory.</description>
    <inlineHelpText>Defines the instructional text to be displayed above the search filters in the directory.</inlineHelpText>
    <label>Instructional Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>