unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Profile_Fields__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Profile_Fields__c</fullName>
    <description>Defines the fields (csv) displayed in the Profile modal.</description>
    <inlineHelpText>Defines the fields (csv) displayed in the Profile modal.</inlineHelpText>
    <label>Profile Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>