unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Search_Fields__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Search_Fields__c</fullName>
    <description>Defines the fields (csv) to be used as search filters at the top of the directory.</description>
    <inlineHelpText>Defines the fields (csv) to be used as search filters at the top of the directory.</inlineHelpText>
    <label>Search Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>