unpackaged/main/default/objects/DirectoryApi__Directory__c/fields/DirectoryApi__Search_Results_Fields__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Search_Results_Fields__c</fullName>
    <description>Defines the fields (csv) to be shown on search results.</description>
    <inlineHelpText>Defines the fields (csv) to be shown on search results.</inlineHelpText>
    <label>Search Results Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>